@@ -29,6 +29,7 @@ Jump Start Changelog
 	* WPML: Fixed WPML options showing on Theme Options, when WPML isn't installed.
 * New: Added support for applying background shade to individual columns in the layout builder.
 * New: Added option for disabling scroll effects at *Appearance > Theme Options > Content > General*.
+* New: Added "Custom Font" selection to typography options; this allows you to use custom fonts with the theme, that you've included yourself through customization or a third-party plugin.
 * Improvement: Swap TGMPA for [My Plugin Manager](http://mypluginmanager.com).
 * Improvement: Better handling of retrieving FontAwesome icons for admin icon browser for more server setups, along with minor UI fixes.
 * Improvement: On all theme bases, if no "Primary Navigation" menu is assigned, menu will not display (previously, only the Agent base behaved like this).
